Fix missing lang-attrubute, color-contrast, aria-labels incident-list

--- a/frontend/assets/styles/components/_list-incidents.scss
+++ b/frontend/assets/styles/components/_list-incidents.scss
@@ -141,7 +141,7 @@
 
             .incident__category,
             .incident__moment {
-                color: $gray-tint08;
+                color: $gray-tint09;
                 margin-bottom: 0.5rem;
             }
             
